objects/Staff_Section__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Shouldn&apos;t be changed</inlineHelpText>
        <label>School</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Staff/Section</relationshipLabel>
        <relationshipName>Staff_Section</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deactivated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deactivated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Teacher_On_RC_PR__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This determines which teachers will be shown on the report cards</description>
        <label>Display Teacher On RC/PR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grade_Levels__c</fullName>
        <formula>IF(INCLUDES( Section__r.All_Grades__c , &quot;K&quot;), &quot;K;&quot;, NULL) &amp;
IF(INCLUDES( Section__r.All_Grades__c , &quot;1&quot;), &quot;1;&quot;, NULL) &amp;
IF(INCLUDES( Section__r.All_Grades__c , &quot;2&quot;), &quot;2;&quot;, NULL) &amp;
IF(INCLUDES( Section__r.All_Grades__c , &quot;3&quot;), &quot;3;&quot;, NULL) &amp;
IF(INCLUDES( Section__r.All_Grades__c , &quot;4&quot;), &quot;4;&quot;, NULL) &amp;
IF(INCLUDES( Section__r.All_Grades__c , &quot;5&quot;), &quot;5;&quot;, NULL) &amp;
IF(INCLUDES( Section__r.All_Grades__c , &quot;6&quot;), &quot;6;&quot;, NULL) &amp;
IF(INCLUDES( Section__r.All_Grades__c , &quot;7&quot;), &quot;7;&quot;, NULL) &amp;
IF(INCLUDES( Section__r.All_Grades__c , &quot;8&quot;), &quot;8;&quot;, NULL) &amp;
IF(INCLUDES( Section__r.All_Grades__c , &quot;9&quot;), &quot;9;&quot;, NULL) &amp;
IF(INCLUDES( Section__r.All_Grades__c , &quot;10&quot;), &quot;10;&quot;, NULL) &amp;
IF(INCLUDES( Section__r.All_Grades__c , &quot;11&quot;), &quot;11;&quot;, NULL) &amp;
IF(INCLUDES( Section__r.All_Grades__c , &quot;12&quot;), &quot;12;&quot;, NULL) &amp;
IF(INCLUDES( Section__r.All_Grades__c , &quot;PS&quot;), &quot;PS;&quot;, NULL) &amp;
IF(INCLUDES( Section__r.All_Grades__c , &quot;PK&quot;), &quot;PK&quot;, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grade Levels</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <formula>TEXT(Section__r.Grade_Level__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grade</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Holding_Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Holding Source</label>
        <referenceTo>HoldingObj__c</referenceTo>
        <relationshipLabel>Staff/Section</relationshipLabel>
        <relationshipName>Staff_Section</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>In_School_Extended_Learning_Curriculum__c</fullName>
        <formula>TEXT(Section__r.In_After_School__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>In School/Extended Learning/Curriculum</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intervention_Primary_Staff__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The Intervention Section&apos;s Primary Staff member. Many staff members can be associated with an Intervention Section, but only one is the primary staff member.</inlineHelpText>
        <label>Intervention Primary Staff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Admin_Configured__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Admin Configured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <description>Concatenated unique id = Staff Legacy_ID__c + Section Legacy_ID__c</description>
        <externalId>true</externalId>
        <label>Legacy ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>Used specifically to order sections in the Gradebook UI.</description>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reference_Id__c</fullName>
        <externalId>true</externalId>
        <label>Reference Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <formula>Section__r.School__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The School related to this Section</inlineHelpText>
        <label>School</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <referenceTo>Section__c</referenceTo>
        <relationshipLabel>Staff</relationshipLabel>
        <relationshipName>Staff_Section</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>StaffUnique__c</fullName>
        <label>StaffUnique</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Staff__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Staff</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Staff__c.Organization__r.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Staff__c</referenceTo>
        <relationshipLabel>Sections</relationshipLabel>
        <relationshipName>Staff_Section</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unique_Staff_Section__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Staff/Section</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>View_Gradebook_as_Read_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this is checked, the current staff can only view gradebook as read only.</description>
        <label>View Gradebook as Read Only</label>
        <type>Checkbox</type>
    </fields>
    <label>Staff/Section</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Is_Active__c</columns>
        <columns>Section__c</columns>
        <columns>Staff__c</columns>
        <columns>School__c</columns>
        <columns>Is_Admin_Configured__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active</label>
    </listViews>
    <nameField>
        <displayFormat>SfS-{000000}</displayFormat>
        <label>Staff/Section ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staff/Section</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>